--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,7 +3,7 @@ host_key_checking = False
 inventory =./inventory.yml
 gathering = explicit
 retry_files_enabled = False
-collections_paths = ./collections:~/.ansible/collections:/usr/share/ansible/collections:../../../ansible-avd/:../../../ansible-cvp/
+collections_paths = ./collections:~/.ansible/collections:/usr/share/ansible/collections:../ansible-avd/:../ansible-cvp/
 jinja2_extensions =  jinja2.ext.loopcontrols,jinja2.ext.do,jinja2.ext.i18n
 # enable the YAML callback plugin.
 stdout_callback = yaml
@@ -11,6 +11,7 @@ stdout_callback = yaml
 bin_ansible_callbacks = True
 forks = 15
 callback_whitelist = profile_roles, profile_tasks, timer
+vault_password_file = ../vault_password.txt
 
 [persistent_connection]
 connect_timeout = 120
