--- a/config_backup/LEAF2A_running-config.conf
+++ b/config_backup/LEAF2A_running-config.conf
@@ -1,4 +1,7 @@
-!RANCID-CONTENT-TYPE: arista
+! Command: show running-config
+! device: LEAF2A (DCS-7280SRA-48C6-M, EOS-4.24.0F)
+!
+! boot system flash:/EOS-4.24.0F.swi
 !
 alias shimet show bgp evpn route-type imet detail | awk '/for imet/ { print "VNI: " $7 ", VTEP: " $8, "RD: " $11 }'
 alias shmacip show bgp evpn route-type mac-ip detail | awk '/for mac-ip/ { if (NF == 11) { print "RD: " $11, "VNI: " $7, "MAC: " $8 } else { print "RD: " $12, "VNI: " $7, "MAC: " $8, "IP: " $9 } }' | sed -e s/,//g
@@ -18,7 +21,7 @@ service routing protocols model multi-agent
 !
 queue-monitor length
 !
-hostname LEAF2B
+hostname LEAF2A
 ip domain lookup vrf MGMT source-interface Management1
 ip name-server vrf MGMT 192.168.70.1
 dns domain ohvlab.local
@@ -84,50 +87,140 @@ interface Port-Channel10
    spanning-tree portfast
 !
 interface Port-Channel47
-   description MLAG_PEER_LEAF2A_Po47
+   description MLAG_PEER_LEAF2B_Po47
    switchport trunk allowed vlan 2-4094
    switchport mode trunk
    switchport trunk group LEAF_PEER_L3
    switchport trunk group MLAG
 !
 interface Ethernet1
-   description P2P_LINK_TO_SPINE1_Ethernet3
+   description P2P_LINK_TO_SPINE1_Ethernet2
    mtu 9216
    no switchport
-   ip address 10.1.1.77/31
+   ip address 10.1.1.73/31
 !
 interface Ethernet2
-   description P2P_LINK_TO_SPINE2_Ethernet3
+   description P2P_LINK_TO_SPINE2_Ethernet2
    mtu 9216
    no switchport
-   ip address 10.1.1.79/31
+   ip address 10.1.1.75/31
+!
+interface Ethernet3
+!
+interface Ethernet4
+!
+interface Ethernet5
+!
+interface Ethernet6
+!
+interface Ethernet7
+!
+interface Ethernet8
+!
+interface Ethernet9
 !
 interface Ethernet10
-   description HostC_eth1
+   description HostC_eth0
    channel-group 10 mode active
 !
 interface Ethernet11
-   description HostE_eth1
+   description HostE_eth0
    switchport access vlan 20
    spanning-tree portfast
 !
 interface Ethernet12
-   description HostD_eth0
-   switchport access vlan 10
-   spanning-tree portfast
-   spanning-tree bpdufilter enable
+!
+interface Ethernet13
+!
+interface Ethernet14
+!
+interface Ethernet15
+!
+interface Ethernet16
+!
+interface Ethernet17
+!
+interface Ethernet18
+!
+interface Ethernet19
+!
+interface Ethernet20
+!
+interface Ethernet21
+!
+interface Ethernet22
+!
+interface Ethernet23
+!
+interface Ethernet24
+!
+interface Ethernet25
+!
+interface Ethernet26
+!
+interface Ethernet27
+!
+interface Ethernet28
+!
+interface Ethernet29
+!
+interface Ethernet30
+!
+interface Ethernet31
+!
+interface Ethernet32
+!
+interface Ethernet33
+!
+interface Ethernet34
+!
+interface Ethernet35
+!
+interface Ethernet36
+!
+interface Ethernet37
+!
+interface Ethernet38
+!
+interface Ethernet39
+!
+interface Ethernet40
+!
+interface Ethernet41
+!
+interface Ethernet42
+!
+interface Ethernet43
+!
+interface Ethernet44
+!
+interface Ethernet45
+!
+interface Ethernet46
 !
 interface Ethernet47
-   description MLAG_PEER_LEAF2A_Ethernet47
+   description MLAG_PEER_LEAF2B_Ethernet47
    channel-group 47 mode active
 !
 interface Ethernet48
-   description MLAG_PEER_LEAF2A_Ethernet48
+   description MLAG_PEER_LEAF2B_Ethernet48
    channel-group 47 mode active
+!
+interface Ethernet49/1
+!
+interface Ethernet50/1
+!
+interface Ethernet51/1
+!
+interface Ethernet52/1
+!
+interface Ethernet53/1
+!
+interface Ethernet54/1
 !
 interface Loopback0
    description EVPN_Overlay_Peering
-   ip address 1.1.1.22/32
+   ip address 1.1.1.21/32
 !
 interface Loopback1
    description VTEP_VXLAN_Tunnel_Source
@@ -136,12 +229,12 @@ interface Loopback1
 interface Loopback100
    description A_VTEP_DIAGNOSTICS
    vrf A
-   ip address 10.255.1.22/32
+   ip address 10.255.1.21/32
 !
 interface Management1
    description oob_management
    vrf MGMT
-   ip address 192.168.100.34/24
+   ip address 192.168.100.33/24
 !
 interface Vlan10
    description Ten-opzone
@@ -166,17 +259,17 @@ interface Vlan40
 interface Vlan3050
    description MLAG_PEER_L3_iBGP: vrf A
    vrf A
-   ip address 10.255.251.37/31
+   ip address 10.255.251.36/31
 !
 interface Vlan4093
    description MLAG_PEER_L3_PEERING
-   ip address 10.255.251.37/31
+   ip address 10.255.251.36/31
 !
 interface Vlan4094
    description MLAG_PEER
    mtu 9216
    no autostate
-   ip address 10.255.252.37/31
+   ip address 10.255.252.36/31
 !
 interface Vxlan1
    vxlan source-interface Loopback1
@@ -192,7 +285,7 @@ hardware tcam
    system profile vxlan-routing
 !
 ip virtual-router mac-address aa:aa:bb:bb:cc:cc
-ip address virtual source-nat vrf A address 10.255.1.22
+ip address virtual source-nat vrf A address 10.255.1.21
 !
 ip routing
 ip routing vrf A
@@ -209,8 +302,8 @@ ip prefix-list PL-P2P-UNDERLAY
 mlag configuration
    domain-id DC1_LEAF2
    local-interface Vlan4094
-   peer-address 10.255.252.36
-   peer-address heartbeat 192.168.100.33 vrf MGMT
+   peer-address 10.255.252.37
+   peer-address heartbeat 192.168.100.34 vrf MGMT
    peer-link Port-Channel47
    dual-primary detection delay 5 action errdisable all-interfaces
    reload-delay mlag 780
@@ -222,7 +315,7 @@ route-map RM-CONN-2-BGP permit 10
    match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
 !
 router bgp 65003
-   router-id 1.1.1.22
+   router-id 1.1.1.21
    update wait-install
    no bgp default ipv4-unicast
    distance bgp 20 200 200
@@ -250,13 +343,13 @@ router bgp 65003
    neighbor MLAG-IPv4-UNDERLAY-PEER maximum-routes 12000
    neighbor 1.1.1.1 peer group EVPN-OVERLAY-PEERS
    neighbor 1.1.1.2 peer group EVPN-OVERLAY-PEERS
-   neighbor 10.1.1.76 peer group IPv4-UNDERLAY-PEERS
-   neighbor 10.1.1.78 peer group IPv4-UNDERLAY-PEERS
-   neighbor 10.255.251.36 peer group MLAG-IPv4-UNDERLAY-PEER
+   neighbor 10.1.1.72 peer group IPv4-UNDERLAY-PEERS
+   neighbor 10.1.1.74 peer group IPv4-UNDERLAY-PEERS
+   neighbor 10.255.251.37 peer group MLAG-IPv4-UNDERLAY-PEER
    redistribute connected route-map RM-CONN-2-BGP
    !
    vlan-aware-bundle A
-      rd 1.1.1.22:51
+      rd 1.1.1.21:51
       route-target both 51:51
       redistribute learned
       vlan 10,20,30,40
@@ -272,11 +365,11 @@ router bgp 65003
       neighbor MLAG-IPv4-UNDERLAY-PEER activate
    !
    vrf A
-      rd 1.1.1.22:51
+      rd 1.1.1.21:51
       route-target import evpn 51:51
       route-target export evpn 51:51
-      router-id 1.1.1.22
-      neighbor 10.255.251.36 peer group MLAG-IPv4-UNDERLAY-PEER
+      router-id 1.1.1.21
+      neighbor 10.255.251.37 peer group MLAG-IPv4-UNDERLAY-PEER
       redistribute connected
 !
 queue-monitor streaming
