--- a/config_backup/LEAF2B_running-config.conf
+++ b/config_backup/LEAF2B_running-config.conf
@@ -1,4 +1,7 @@
-!RANCID-CONTENT-TYPE: arista
+! Command: show running-config
+! device: LEAF2B (DCS-7280SRA-48C6, EOS-4.24.0F)
+!
+! boot system flash:/EOS-4.24.0F.swi
 !
 alias shimet show bgp evpn route-type imet detail | awk '/for imet/ { print "VNI: " $7 ", VTEP: " $8, "RD: " $11 }'
 alias shmacip show bgp evpn route-type mac-ip detail | awk '/for mac-ip/ { if (NF == 11) { print "RD: " $11, "VNI: " $7, "MAC: " $8 } else { print "RD: " $12, "VNI: " $7, "MAC: " $8, "IP: " $9 } }' | sed -e s/,//g
@@ -102,6 +105,20 @@ interface Ethernet2
    no switchport
    ip address 10.1.1.79/31
 !
+interface Ethernet3
+!
+interface Ethernet4
+!
+interface Ethernet5
+!
+interface Ethernet6
+!
+interface Ethernet7
+!
+interface Ethernet8
+!
+interface Ethernet9
+!
 interface Ethernet10
    description HostC_eth1
    channel-group 10 mode active
@@ -117,6 +134,74 @@ interface Ethernet12
    spanning-tree portfast
    spanning-tree bpdufilter enable
 !
+interface Ethernet13
+!
+interface Ethernet14
+!
+interface Ethernet15
+!
+interface Ethernet16
+!
+interface Ethernet17
+!
+interface Ethernet18
+!
+interface Ethernet19
+!
+interface Ethernet20
+!
+interface Ethernet21
+!
+interface Ethernet22
+!
+interface Ethernet23
+!
+interface Ethernet24
+!
+interface Ethernet25
+!
+interface Ethernet26
+!
+interface Ethernet27
+!
+interface Ethernet28
+!
+interface Ethernet29
+!
+interface Ethernet30
+!
+interface Ethernet31
+!
+interface Ethernet32
+!
+interface Ethernet33
+!
+interface Ethernet34
+!
+interface Ethernet35
+!
+interface Ethernet36
+!
+interface Ethernet37
+!
+interface Ethernet38
+!
+interface Ethernet39
+!
+interface Ethernet40
+!
+interface Ethernet41
+!
+interface Ethernet42
+!
+interface Ethernet43
+!
+interface Ethernet44
+!
+interface Ethernet45
+!
+interface Ethernet46
+!
 interface Ethernet47
    description MLAG_PEER_LEAF2A_Ethernet47
    channel-group 47 mode active
@@ -124,6 +209,18 @@ interface Ethernet47
 interface Ethernet48
    description MLAG_PEER_LEAF2A_Ethernet48
    channel-group 47 mode active
+!
+interface Ethernet49/1
+!
+interface Ethernet50/1
+!
+interface Ethernet51/1
+!
+interface Ethernet52/1
+!
+interface Ethernet53/1
+!
+interface Ethernet54/1
 !
 interface Loopback0
    description EVPN_Overlay_Peering
