--- a/intended/configs/LEAF1A.cfg
+++ b/intended/configs/LEAF1A.cfg
@@ -5,7 +5,7 @@ alias shmacip show bgp evpn route-type mac-ip detail | awk '/for mac-ip/ { if (N
 alias shprefix show bgp evpn route-type ip-prefix ipv4 detail | awk '/for ip-prefix/ { print "ip-prefix: " $7, "RD: " $10 }'
 !
 daemon TerminAttr
-   exec /usr/bin/TerminAttr -ingestgrpcurl=192.168.100.240:9910 -cvcompression=gzip -ingestauth=key,magickey02122020 -smashexcludes=ale,flexCounter,hardware,kni,pulse,strata -ingestexclude=/Sysdb/cell/1/agent,/Sysdb/cell/2/agent -ingestvrf=MGMT -taillogs
+   exec /usr/bin/TerminAttr -ingestgrpcurl=192.168.100.240:9910 -cvcompression=gzip -ingestauth=key,magickey04292020 -smashexcludes=ale,flexCounter,hardware,kni,pulse,strata -ingestexclude=/Sysdb/cell/1/agent,/Sysdb/cell/2/agent -ingestvrf=MGMT -taillogs
    no shutdown
 !
 vlan internal order ascending range 1006 1199
@@ -77,18 +77,18 @@ interface Ethernet2
    ip address 10.1.1.35/31
 !
 interface Ethernet10
-   description HostA_E1
+   description HostA_eth0
    switchport access vlan 10
    spanning-tree portfast
    spanning-tree bpdufilter enable
 !
 interface Ethernet11
-   description HostB_E1
+   description HostB_eth0
    switchport access vlan 20
    spanning-tree portfast
 !
 interface Ethernet12
-   description HostF_E1
+   description HostF_eth0
    switchport access vlan 40
    spanning-tree portfast
 !
