--- a/intended/configs/LEAF2A.cfg
+++ b/intended/configs/LEAF2A.cfg
@@ -5,7 +5,7 @@ alias shmacip show bgp evpn route-type mac-ip detail | awk '/for mac-ip/ { if (N
 alias shprefix show bgp evpn route-type ip-prefix ipv4 detail | awk '/for ip-prefix/ { print "ip-prefix: " $7, "RD: " $10 }'
 !
 daemon TerminAttr
-   exec /usr/bin/TerminAttr -ingestgrpcurl=192.168.100.240:9910 -cvcompression=gzip -ingestauth=key,magickey02122020 -smashexcludes=ale,flexCounter,hardware,kni,pulse,strata -ingestexclude=/Sysdb/cell/1/agent,/Sysdb/cell/2/agent -ingestvrf=MGMT -taillogs
+   exec /usr/bin/TerminAttr -ingestgrpcurl=192.168.100.240:9910 -cvcompression=gzip -ingestauth=key,magickey04292020 -smashexcludes=ale,flexCounter,hardware,kni,pulse,strata -ingestexclude=/Sysdb/cell/1/agent,/Sysdb/cell/2/agent -ingestvrf=MGMT -taillogs
    no shutdown
 !
 vlan internal order ascending range 1006 1199
@@ -78,7 +78,7 @@ vrf instance A
 vrf instance MGMT
 !
 interface Port-Channel10
-   description HostC_Po1
+   description HostC_bond0
    switchport access vlan 30
    mlag 10
    spanning-tree portfast
@@ -103,11 +103,11 @@ interface Ethernet2
    ip address 10.1.1.75/31
 !
 interface Ethernet10
-   description HostC_E1
+   description HostC_eth0
    channel-group 10 mode active
 !
 interface Ethernet11
-   description HostE_E1
+   description HostE_eth0
    switchport access vlan 20
    spanning-tree portfast
 !
