--- a/config_backup/SPINE2_running-config.conf
+++ b/config_backup/SPINE2_running-config.conf
@@ -1,4 +1,7 @@
-!RANCID-CONTENT-TYPE: arista
+! Command: show running-config
+! device: SPINE2 (DCS-7280SE-68, EOS-4.23.2F)
+!
+! boot system flash:/EOS-4.23.2F.swi
 !
 alias shimet show bgp evpn route-type imet detail | awk '/for imet/ { print "VNI: " $7 ", VTEP: " $8, "RD: " $11 }'
 alias shmacip show bgp evpn route-type mac-ip detail | awk '/for mac-ip/ { if (NF == 11) { print "RD: " $11, "VNI: " $7, "MAC: " $8 } else { print "RD: " $12, "VNI: " $7, "MAC: " $8, "IP: " $9 } }' | sed -e s/,//g
@@ -18,7 +21,7 @@ service routing protocols model multi-agent
 !
 queue-monitor length
 !
-hostname SPINE1
+hostname SPINE2
 ip domain lookup vrf MGMT source-interface Management1
 ip name-server vrf MGMT 192.168.70.1
 dns domain ohvlab.local
@@ -47,31 +50,125 @@ clock timezone America/Detroit
 vrf instance MGMT
 !
 interface Ethernet1
-   description P2P_LINK_TO_LEAF1A_Ethernet1
+   description P2P_LINK_TO_LEAF1A_Ethernet2
    mtu 9216
    no switchport
-   ip address 10.1.1.32/31
+   ip address 10.1.1.34/31
 !
 interface Ethernet2
-   description P2P_LINK_TO_LEAF2A_Ethernet1
+   description P2P_LINK_TO_LEAF2A_Ethernet2
    mtu 9216
    no switchport
-   ip address 10.1.1.72/31
+   ip address 10.1.1.74/31
 !
 interface Ethernet3
-   description P2P_LINK_TO_LEAF2B_Ethernet1
+   description P2P_LINK_TO_LEAF2B_Ethernet2
    mtu 9216
    no switchport
-   ip address 10.1.1.76/31
+   ip address 10.1.1.78/31
+!
+interface Ethernet4
+!
+interface Ethernet5
+!
+interface Ethernet6
+!
+interface Ethernet7
+!
+interface Ethernet8
+!
+interface Ethernet9
+!
+interface Ethernet10
+!
+interface Ethernet11
+!
+interface Ethernet12
+!
+interface Ethernet13
+!
+interface Ethernet14
+!
+interface Ethernet15
+!
+interface Ethernet16
+!
+interface Ethernet17
+!
+interface Ethernet18
+!
+interface Ethernet19
+!
+interface Ethernet20
+!
+interface Ethernet21
+!
+interface Ethernet22
+!
+interface Ethernet23
+!
+interface Ethernet24
+!
+interface Ethernet25
+!
+interface Ethernet26
+!
+interface Ethernet27
+!
+interface Ethernet28
+!
+interface Ethernet29
+!
+interface Ethernet30
+!
+interface Ethernet31
+!
+interface Ethernet32
+!
+interface Ethernet33
+!
+interface Ethernet34
+!
+interface Ethernet35
+!
+interface Ethernet36
+!
+interface Ethernet37
+!
+interface Ethernet38
+!
+interface Ethernet39
+!
+interface Ethernet40
+!
+interface Ethernet41
+!
+interface Ethernet42
+!
+interface Ethernet43
+!
+interface Ethernet44
+!
+interface Ethernet45
+!
+interface Ethernet46
+!
+interface Ethernet47
+!
+interface Ethernet48
+!
+interface Ethernet49/1
+!
+interface Ethernet50/1
 !
 interface Loopback0
    description EVPN_Overlay_Peering
-   ip address 1.1.1.1/32
+   ip address 1.1.1.2/32
 !
 interface Management1
    description oob_management
    vrf MGMT
-   ip address 192.168.100.31/24
+   ip address 192.168.100.35/24
 !
 hardware tcam
    system profile vxlan-routing
@@ -91,7 +188,7 @@ peer-filter LEAF-AS-RANGE
    10 match as-range 65001-65199 result accept
 !
 router bgp 65001
-   router-id 1.1.1.1
+   router-id 1.1.1.2
    update wait-for-convergence
    update wait-install
    no bgp default ipv4-unicast
@@ -116,12 +213,12 @@ router bgp 65001
    neighbor 1.1.1.21 remote-as 65003
    neighbor 1.1.1.22 peer group EVPN-OVERLAY-PEERS
    neighbor 1.1.1.22 remote-as 65003
-   neighbor 10.1.1.33 peer group IPv4-UNDERLAY-PEERS
-   neighbor 10.1.1.33 remote-as 65002
-   neighbor 10.1.1.73 peer group IPv4-UNDERLAY-PEERS
-   neighbor 10.1.1.73 remote-as 65003
-   neighbor 10.1.1.77 peer group IPv4-UNDERLAY-PEERS
-   neighbor 10.1.1.77 remote-as 65003
+   neighbor 10.1.1.35 peer group IPv4-UNDERLAY-PEERS
+   neighbor 10.1.1.35 remote-as 65002
+   neighbor 10.1.1.75 peer group IPv4-UNDERLAY-PEERS
+   neighbor 10.1.1.75 remote-as 65003
+   neighbor 10.1.1.79 peer group IPv4-UNDERLAY-PEERS
+   neighbor 10.1.1.79 remote-as 65003
    redistribute connected route-map RM-CONN-2-BGP
    !
    address-family evpn
