--- a/intended/structured_configs/LEAF2B.yml
+++ b/intended/structured_configs/LEAF2B.yml
@@ -34,7 +34,7 @@ daemon_terminattr:
     ips:
       - 192.168.100.240
     port: 9910
-  ingestauth_key: magickey02122020
+  ingestauth_key: magickey04292020
   ingestvrf: MGMT
   smashexcludes: "ale,flexCounter,hardware,kni,pulse,strata"
   ingestexclude: "/Sysdb/cell/1/agent,/Sysdb/cell/2/agent"
@@ -166,7 +166,7 @@ port_channel_interfaces:
       - LEAF_PEER_L3
       - MLAG
   Port-Channel10:
-    description: HostC_Po1
+    description: HostC_bond0
     vlans: 30
     mode: access
     mlag: 10
@@ -209,24 +209,32 @@ ethernet_interfaces:
       mode: active
   Ethernet10:
     peer: HostC
-    peer_interface: E2
+    peer_interface: eth1
     peer_type: server
-    description: HostC_E2
+    description: HostC_eth1
     mode: access
     vlans: 30
     spanning_tree_portfast: edge
     channel_group:
       id: 10
       mode: "active"
-  Ethernet11:
+  Ethernet12:
     peer: HostD
-    peer_interface: E1
+    peer_interface: eth0
     peer_type: server
-    description: HostD_E1
+    description: HostD_eth0
     mode: access
     vlans: 10
     spanning_tree_portfast: edge
     spanning_tree_bpdufilter: True
+  Ethernet11:
+    peer: HostE
+    peer_interface: eth1
+    peer_type: server
+    description: HostE_eth1
+    mode: access
+    vlans: 20
+    spanning_tree_portfast: edge
 
 
 ### Loopback Interfaces ###
