--- a/ansible.cfg
+++ b/ansible.cfg
@@ -11,7 +11,7 @@ stdout_callback = yaml
 bin_ansible_callbacks = True
 forks = 15
 callback_whitelist = profile_roles, profile_tasks, timer
-vault_password_file = ../vault_password.txt
+vault_password_file = ../../vault_password.txt
 
 [persistent_connection]
 connect_timeout = 120
