--- a/config_backup/LEAF2A_running-config.conf
+++ b/config_backup/LEAF2A_running-config.conf
@@ -1,7 +1,7 @@
 ! Command: show running-config
-! device: LEAF2A (DCS-7280SRA-48C6-M, EOS-4.24.0F)
+! device: LEAF2A (DCS-7280SRA-48C6-M, EOS-4.23.3M)
 !
-! boot system flash:/EOS-4.24.0F.swi
+! boot system flash:/EOS-4.23.3M.swi
 !
 alias shimet show bgp evpn route-type imet detail | awk '/for imet/ { print "VNI: " $7 ", VTEP: " $8, "RD: " $11 }'
 alias shmacip show bgp evpn route-type mac-ip detail | awk '/for mac-ip/ { if (NF == 11) { print "RD: " $11, "VNI: " $7, "MAC: " $8 } else { print "RD: " $12, "VNI: " $7, "MAC: " $8, "IP: " $9 } }' | sed -e s/,//g
