--- a/group_vars/DC1_FABRIC.yml
+++ b/group_vars/DC1_FABRIC.yml
@@ -66,7 +66,7 @@ l3leaf:
     DC1_LEAF1:
       bgp_as: 65002
       filter:
-        tenants: [ all ]
+        tenants: [ Tenant_A ]
         tags: [ opzone, web, app, db ]
       nodes:
         LEAF1A:
