--- a/intended/configs/LEAF2B.cfg
+++ b/intended/configs/LEAF2B.cfg
@@ -83,6 +83,12 @@ interface Port-Channel10
    mlag 10
    spanning-tree portfast
 !
+interface Port-Channel11
+   description HostE_bond0
+   switchport access vlan 20
+   mlag 11
+   spanning-tree portfast
+!
 interface Port-Channel47
    description MLAG_PEER_LEAF2A_Po47
    switchport trunk allowed vlan 2-4094
@@ -108,14 +114,12 @@ interface Ethernet10
 !
 interface Ethernet11
    description HostE_eth1
-   switchport access vlan 20
-   spanning-tree portfast
+   channel-group 11 mode active
 !
 interface Ethernet12
    description HostD_eth0
    switchport access vlan 10
    spanning-tree portfast
-   spanning-tree bpdufilter enable
 !
 interface Ethernet47
    description MLAG_PEER_LEAF2A_Ethernet47
