--- a/intended/configs/LEAF2A.cfg
+++ b/intended/configs/LEAF2A.cfg
@@ -83,6 +83,12 @@ interface Port-Channel10
    mlag 10
    spanning-tree portfast
 !
+interface Port-Channel11
+   description HostE_bond0
+   switchport access vlan 20
+   mlag 11
+   spanning-tree portfast
+!
 interface Port-Channel47
    description MLAG_PEER_LEAF2B_Po47
    switchport trunk allowed vlan 2-4094
@@ -108,8 +114,7 @@ interface Ethernet10
 !
 interface Ethernet11
    description HostE_eth0
-   switchport access vlan 20
-   spanning-tree portfast
+   channel-group 11 mode active
 !
 interface Ethernet47
    description MLAG_PEER_LEAF2B_Ethernet47
