--- a/intended/structured_configs/LEAF2A.yml
+++ b/intended/structured_configs/LEAF2A.yml
@@ -171,6 +171,12 @@ port_channel_interfaces:
     mode: access
     mlag: 10
     spanning_tree_portfast: edge
+  Port-Channel11:
+    description: HostE_bond0
+    vlans: 20
+    mode: access
+    mlag: 11
+    spanning_tree_portfast: edge
 
 ### Ethernet Interfaces ###
 ethernet_interfaces:
@@ -226,6 +232,9 @@ ethernet_interfaces:
     mode: access
     vlans: 20
     spanning_tree_portfast: edge
+    channel_group:
+      id: 11
+      mode: "active"
 
 
 ### Loopback Interfaces ###
