--- a/intended/structured_configs/LEAF2B.yml
+++ b/intended/structured_configs/LEAF2B.yml
@@ -171,6 +171,12 @@ port_channel_interfaces:
     mode: access
     mlag: 10
     spanning_tree_portfast: edge
+  Port-Channel11:
+    description: HostE_bond0
+    vlans: 20
+    mode: access
+    mlag: 11
+    spanning_tree_portfast: edge
 
 ### Ethernet Interfaces ###
 ethernet_interfaces:
@@ -226,7 +232,6 @@ ethernet_interfaces:
     mode: access
     vlans: 10
     spanning_tree_portfast: edge
-    spanning_tree_bpdufilter: True
   Ethernet11:
     peer: HostE
     peer_interface: eth1
@@ -235,6 +240,9 @@ ethernet_interfaces:
     mode: access
     vlans: 20
     spanning_tree_portfast: edge
+    channel_group:
+      id: 11
+      mode: "active"
 
 
 ### Loopback Interfaces ###
