--- a/group_vars/DC1_TENANTS_NETWORKS.yml
+++ b/group_vars/DC1_TENANTS_NETWORKS.yml
@@ -28,11 +28,11 @@ tenants:
             tags: [ app ]
             enabled: true
             ip_address_virtual: 30.30.30.1/24
-          40:
-            name: Forty-db
-            tags: [ db ]
-            enabled: true
-            ip_address_virtual: 40.40.40.1/24
+          # 40:
+          #   name: Forty-db
+          #   tags: [ db ]
+          #   enabled: true
+          #   ip_address_virtual: 40.40.40.1/24
 
 # Tenant B Specific Information - VRFs / VLANs
   # Tenant_B:
@@ -61,6 +61,6 @@ tenants:
   #           ip_address_virtual: 31.31.31.1/24
   #         41:
   #           name: FortyOne-db
-  #           tags: [ db ]
+  #           tags: [ db2 ]
   #           enabled: true
   #           ip_address_virtual: 41.41.41.1/24
