--- a/config_backup/SPINE1_running-config.conf
+++ b/config_backup/SPINE1_running-config.conf
@@ -27,7 +27,8 @@ ip name-server vrf MGMT 192.168.70.1
 dns domain ohvlab.local
 !
 ntp local-interface vrf MGMT Management1
-ntp server vrf MGMT 216.239.35.4 prefer
+ntp server vrf MGMT 192.232.20.87 prefer
+ntp server vrf MGMT 216.239.35.4
 !
 radius-server host 192.168.100.254 vrf MGMT key 7 02090C4D07070D731C1C5958
 !
