+ new network services

--- a/config_backup/LEAF1A_running-config.conf
+++ b/config_backup/LEAF1A_running-config.conf
@@ -58,6 +58,9 @@ vlan 10
 vlan 20
    name Twenty-web
 !
+vlan 40
+   name Forty-db
+!
 vrf instance A
 !
 vrf instance MGMT
@@ -212,11 +215,17 @@ interface Vlan20
    vrf A
    ip address virtual 20.20.20.1/24
 !
+interface Vlan40
+   description Forty-db
+   vrf A
+   ip address virtual 40.40.40.1/24
+!
 interface Vxlan1
    vxlan source-interface Loopback1
    vxlan udp-port 4789
    vxlan vlan 10 vni 10010
    vxlan vlan 20 vni 10020
+   vxlan vlan 40 vni 10040
    vxlan vrf A vni 51
 !
 hardware tcam
@@ -272,7 +281,7 @@ router bgp 65002
       rd 1.1.1.7:51
       route-target both 51:51
       redistribute learned
-      vlan 10,20
+      vlan 10,20,40
    !
    address-family evpn
       neighbor EVPN-OVERLAY-PEERS activate
