--- a/config_backup/LEAF2B_running-config.conf
+++ b/config_backup/LEAF2B_running-config.conf
@@ -56,14 +56,30 @@ clock timezone America/Detroit
 vlan 10
    name Ten-opzone
 !
+vlan 11
+   name Eleven-opzone
+!
 vlan 20
    name Twenty-web
+!
+vlan 21
+   name TwentyOne-web
 !
 vlan 30
    name Thirty-app
 !
+vlan 31
+   name ThirtyOne-app
+!
+vlan 41
+   name FortyOne-db
+!
 vlan 3050
    name MLAG_iBGP_A
+   trunk group LEAF_PEER_L3
+!
+vlan 3150
+   name MLAG_iBGP_B
    trunk group LEAF_PEER_L3
 !
 vlan 4093
@@ -75,6 +91,8 @@ vlan 4094
    trunk group MLAG
 !
 vrf instance A
+!
+vrf instance B
 !
 vrf instance MGMT
 !
@@ -229,6 +247,11 @@ interface Loopback100
    vrf A
    ip address 10.255.1.22/32
 !
+interface Loopback101
+   description B_VTEP_DIAGNOSTICS
+   vrf B
+   ip address 10.255.2.22/32
+!
 interface Management1
    description oob_management
    vrf MGMT
@@ -239,19 +262,44 @@ interface Vlan10
    vrf A
    ip address virtual 10.10.10.1/24
 !
+interface Vlan11
+   description Eleven-opzone
+   vrf B
+   ip address virtual 11.11.11.1/24
+!
 interface Vlan20
    description Twenty-web
    vrf A
    ip address virtual 20.20.20.1/24
+!
+interface Vlan21
+   description TwentyOne-web
+   vrf B
+   ip address virtual 21.21.21.1/24
 !
 interface Vlan30
    description Thirty-app
    vrf A
    ip address virtual 30.30.30.1/24
 !
+interface Vlan31
+   description ThirtyOne-app
+   vrf B
+   ip address virtual 31.31.31.1/24
+!
+interface Vlan41
+   description FortyOne-db
+   vrf B
+   ip address virtual 41.41.41.1/24
+!
 interface Vlan3050
    description MLAG_PEER_L3_iBGP: vrf A
    vrf A
+   ip address 10.255.251.37/31
+!
+interface Vlan3150
+   description MLAG_PEER_L3_iBGP: vrf B
+   vrf B
    ip address 10.255.251.37/31
 !
 interface Vlan4093
@@ -269,18 +317,25 @@ interface Vxlan1
    vxlan virtual-router encapsulation mac-address mlag-system-id
    vxlan udp-port 4789
    vxlan vlan 10 vni 10010
+   vxlan vlan 11 vni 20011
    vxlan vlan 20 vni 10020
+   vxlan vlan 21 vni 20021
    vxlan vlan 30 vni 10030
+   vxlan vlan 31 vni 20031
+   vxlan vlan 41 vni 20041
    vxlan vrf A vni 51
+   vxlan vrf B vni 151
 !
 hardware tcam
    system profile vxlan-routing
 !
 ip virtual-router mac-address aa:aa:bb:bb:cc:cc
 ip address virtual source-nat vrf A address 10.255.1.22
+ip address virtual source-nat vrf B address 10.255.2.22
 !
 ip routing
 ip routing vrf A
+ip routing vrf B
 no ip routing vrf MGMT
 !
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
@@ -346,6 +401,12 @@ router bgp 65003
       redistribute learned
       vlan 10,20,30
    !
+   vlan-aware-bundle B
+      rd 1.1.1.22:151
+      route-target both 151:151
+      redistribute learned
+      vlan 11,21,31,41
+   !
    address-family evpn
       neighbor EVPN-OVERLAY-PEERS activate
       no neighbor IPv4-UNDERLAY-PEERS activate
@@ -360,6 +421,14 @@ router bgp 65003
       rd 1.1.1.22:51
       route-target import evpn 51:51
       route-target export evpn 51:51
+      router-id 1.1.1.22
+      neighbor 10.255.251.36 peer group MLAG-IPv4-UNDERLAY-PEER
+      redistribute connected
+   !
+   vrf B
+      rd 1.1.1.22:151
+      route-target import evpn 151:151
+      route-target export evpn 151:151
       router-id 1.1.1.22
       neighbor 10.255.251.36 peer group MLAG-IPv4-UNDERLAY-PEER
       redistribute connected
