--- a/intended/structured_configs/LEAF1A.yml
+++ b/intended/structured_configs/LEAF1A.yml
@@ -12,8 +12,8 @@ switch_mgmt_ip: 192.168.100.32/24
 leaf_filter_tenants: ['Tenant_A']
 leaf_filter_tags: ['opzone', 'web', 'db']
 leaf_allowed_vrfs: ['A']
-leaf_allowed_svis: [10, 20]
-leaf_allowed_vlans: [10, 20]
+leaf_allowed_svis: [10, 20, 40]
+leaf_allowed_vlans: [10, 20, 40]
 leaf_mlag: False
 
 service_routing_protocols_model: multi-agent
@@ -111,6 +111,9 @@ vlans:
   20:
     tenant: Tenant_A
     name: Twenty-web
+  40:
+    tenant: Tenant_A
+    name: Forty-db
 
 ### VRFs ###
 vrfs:
@@ -204,6 +207,12 @@ vlan_interfaces:
     description: Twenty-web
     vrf: A
     ip_address_virtual: 20.20.20.1/24
+  Vlan40:
+    tenant: Tenant_A
+    tags: ['db']
+    description: Forty-db
+    vrf: A
+    ip_address_virtual: 40.40.40.1/24
 
 ### VxLAN interface ###
 vxlan_tunnel_interface:
@@ -218,6 +227,8 @@ vxlan_tunnel_interface:
           vni: 10010
         20:
           vni: 10020
+        40:
+          vni: 10040
       vrfs:
 ## Tenant_A ##
         A:
@@ -324,7 +335,7 @@ router_bgp:
           - "51:51"
       redistribute_routes:
         - learned
-      vlan: 10,20
+      vlan: 10,20,40
   vlans:
   vrfs:
 ## Tenant_A ##
