--- a/config_backup/LEAF1A_running-config.conf
+++ b/config_backup/LEAF1A_running-config.conf
@@ -102,6 +102,9 @@ interface Ethernet11
    spanning-tree portfast
 !
 interface Ethernet12
+   description HostF_eth0
+   switchport access vlan 40
+   spanning-tree portfast
 !
 interface Ethernet13
 !
