--- a/intended/configs/LEAF1A.cfg
+++ b/intended/configs/LEAF1A.cfg
@@ -84,6 +84,11 @@ interface Ethernet11
    switchport access vlan 20
    spanning-tree portfast
 !
+interface Ethernet12
+   description HostF_eth0
+   switchport access vlan 40
+   spanning-tree portfast
+!
 interface Loopback0
    description EVPN_Overlay_Peering
    ip address 1.1.1.7/32
