--- a/intended/structured_configs/LEAF2B.yml
+++ b/intended/structured_configs/LEAF2B.yml
@@ -191,6 +191,12 @@ port_channel_interfaces:
     mode: access
     mlag: 10
     spanning_tree_portfast: edge
+  Port-Channel11:
+    description: HostE_bond0
+    vlans: 20
+    mode: access
+    mlag: 11
+    spanning_tree_portfast: edge
 
 ### Ethernet Interfaces ###
 ethernet_interfaces:
@@ -246,6 +252,17 @@ ethernet_interfaces:
     mode: access
     vlans: 10
     spanning_tree_portfast: edge
+  Ethernet11:
+    peer: HostE
+    peer_interface: eth1
+    peer_type: server
+    description: HostE_eth1
+    mode: access
+    vlans: 20
+    spanning_tree_portfast: edge
+    channel_group:
+      id: 11
+      mode: "active"
 
 
 ### Loopback Interfaces ###
