--- a/intended/configs/LEAF2B.cfg
+++ b/intended/configs/LEAF2B.cfg
@@ -99,6 +99,12 @@ interface Port-Channel10
    mlag 10
    spanning-tree portfast
 !
+interface Port-Channel11
+   description HostE_bond0
+   switchport access vlan 20
+   mlag 11
+   spanning-tree portfast
+!
 interface Port-Channel47
    description MLAG_PEER_LEAF2A_Po47
    switchport trunk allowed vlan 2-4094
@@ -121,6 +127,10 @@ interface Ethernet2
 interface Ethernet10
    description HostC_eth1
    channel-group 10 mode active
+!
+interface Ethernet11
+   description HostE_eth1
+   channel-group 11 mode active
 !
 interface Ethernet12
    description HostD_eth0
